fixed x overflow scaling issue

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,6 +6,10 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
 
+body {
+  overflow: hidden;
+}
+
 /* Some default styles to make each box visible */
 .box {
   overflow-y: auto;
@@ -80,6 +84,10 @@ hr{
 
 .tooltip:hover .tooltiptext {
   visibility: visible;
+}
+
+.sequence_box {
+
 }
 
 /* Example Different Sizes */
@@ -172,6 +180,7 @@ input[type=submit]{
 
 #background_settings{
   height:25vh;
+  overflow-x: hidden;
 }
 
 #neucleotide_input{
@@ -196,6 +205,7 @@ input[type=submit]{
   flex-wrap:nowrap;
   flex-direction:row;
   height:10vh;
+  overflow-x: none;
 }
 
 .tab {
